# BayerImageProcessor

./: .gitignore  README.md  main.py
cpp/: BayerImageProcessor.cpp  CMakeLists.txt  CMakePresets.json  Makefile  binToPng.cpp  detectAndFixShift.cpp  shiftRightImage.c
python/: BayerImageProcessor.py  GUI.py  binToPng.py  bip  bip.bat  detectAndFixShift.py  diffBinImage.py  packageBip.bat  packageBip.sh  shiftRightImage.py
